# Mini-CW

./: .gitignore  CMakeLists.txt  README.md  cp.ps1  develop_notes.md  sdkconfig  sdkconfig.defaults
components/M5Cardputer/: CMakeLists.txt  README.md  library.json  library.properties
components/M5Cardputer/examples/Advanced/SSHClient/: SSHClient.ino
components/M5Cardputer/examples/Basic/button/: button.ino
components/M5Cardputer/examples/Basic/buzzer/: buzzer.ino
components/M5Cardputer/examples/Basic/display/: display.ino
components/M5Cardputer/examples/Basic/ir_nec/: ir_nec.ino
components/M5Cardputer/examples/Basic/mic/: mic.ino
components/M5Cardputer/examples/Basic/mic_wav_record/: mic_wav_record.ino
components/M5Cardputer/examples/Basic/sdcard/: sdcard.ino
components/M5Cardputer/src/: M5Cardputer.cpp  M5Cardputer.h
components/M5Cardputer/src/utility/Adafruit_TCA8418/: Adafruit_TCA8418.cpp  Adafruit_TCA8418.h
components/M5Cardputer/src/utility/Keyboard/: Keyboard.cpp  Keyboard.h  (+1 more)
components/cw_trainer_service/: CMakeLists.txt  cw_callsign_mode.c  cw_lesson_mode.c  cw_plaintext_mode.c  cw_trainer_service.c  cw_word_mode.c
components/cw_trainer_service/include/: cw_trainer_service.h
components/cw_trainer_service/private_include/: cw_callsign_mode.h  cw_lesson_mode.h  cw_plaintext_mode.h  cw_trainer_internal.h  cw_word_mode.h
components/ui_service/: CMakeLists.txt  ui_cardputer_port.cpp  ui_cardputer_port.h  ui_screen.cpp  ui_service.c
components/ui_service/include/: ui_service.h
components/ui_service/private_include/: ui_screen.h
(+42 files in other folders)
